# p2p-copy

./: .gitignore  404.html  README.md  Verwendung.md  bereits_erledigt.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
alt/: Programmgrundlagen.md  Verwendung.md
api/: index.html
docs/: ARCHITEKTUR_MODULSKIZZE.md  Architekturskizze.md  Programmgrundlagen.md  Verwendung.md  Vorgehensplan.md  api.md  bereits_erledigt.md  examples.md  features.md  index.md  installation.md  layout.md  relay.md  security.md  troubleshooting.md  usage.md
examples/: receive_usage.py
features/: index.html
installation/: index.html
layout/: index.html
relay/: index.html
search/: search_index.json
security/: index.html
server/: relay.py
src/p2p_copy/: __init__.py  api.py  checksum.py  chunker.py  compressor.py  errors.py  io_utils.py  protocol.py  security.py
src/p2p_copy_cli/: main.py
src/p2p_copy_server/: __init__.py  relay.py
tests/: test_Phase3.py  test_compressed_send.py  test_copy_over_server.py  test_encryption.py  test_env.py  test_environment.py  test_minimal_copy.py  test_perf_compression.py  test_resume.py  test_resume_with_encrypt.py
troubleshooting/: index.html
usage/: index.html
